# efAndroidTemp

./: .gitmodules
ef/: gradle.properties  settings.gradle
ef/ef/: CMakeLists.txt  build.gradle
ef/ef/platform/android/src/common/: Window.cpp  Window.hpp  android_main.cpp  demo_scene.cpp  demo_scene.hpp  efWindow.hpp
ef/ef/platform/android/src/main/: AndroidManifest.xml
ef/ef/platform/android/src/main/cpp/: CMakeLists.txt  WindowAndroid.cpp  WindowAndroid.hpp  common.hpp  efWindowAndroid.cpp  efWindowAndroid.hpp  engine.hpp  entry_point_android.cpp  entry_point_android.h  native_engine.cpp  native_engine.hpp  windowAndroid.cpp  windowAndroid.hpp
ef/ef/platform/android/src/main/java/com/eferus/: EfGameActivity.java
ef/ef/platform/android/src/main/java/com/google/android/games/paddleboat/gamecontrollersample/: PaddleboatDemoActivity.java
ef/ef/platform/android/src/main/res/values/: strings.xml
ef/ef/src/: application.cpp  application.h  core.h  demo_scene.cpp  demo_scene.hpp  ef.h  entry_point.h  log.cpp  log.h
ef/ef/src/common/: demo_scene.cpp  efWindow.cpp  efWindow.hpp
ef/ef/src/engine/: common.hpp  core.h  ef.h  entry_point.cpp  entry_point.h  native_engine.cpp  native_engine.hpp  scene.cpp  scene.hpp  scene_manager.cpp
ef/ef/src/engine/platform/android/: JNIUtil.h  jni_util.cpp  windowAndroid.cpp  windowAndroid.hpp
ef/ef/src/main/cpp/: CMakeLists.txt  efWindowAndroid.cpp  efWindowAndroid.hpp  native_engine.cpp  native_engine.hpp
ef/game_controller/gameactivity/: build.gradle
ef/game_controller/gameactivity/app/src/main/cpp/: CMakeLists.txt
